--- a/css/styles.css
+++ b/css/styles.css
@@ -382,7 +382,32 @@ body {
   padding-top: 144px;
   background-color: #000;
   position: relative;
-  overflow: hidden;
+}
+@media screen and (max-width: 1320px) {
+  .choose {
+    min-height: 2100px;
+  }
+}
+@media screen and (max-width: 1080px) {
+  .choose {
+    min-height: 2400px;
+  }
+}
+@media screen and (max-width: 784px) {
+  .choose {
+    padding-top: 80px;
+    min-height: 2600px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .choose {
+    min-height: 3400px;
+  }
+}
+@media screen and (max-width: 440px) {
+  .choose {
+    min-height: 3200px;
+  }
 }
 
 .choose__container {
@@ -400,6 +425,21 @@ body {
   position: relative;
   z-index: 1;
 }
+@media screen and (max-width: 1320px) {
+  .choose__title {
+    text-align: center;
+  }
+}
+@media screen and (max-width: 768px) {
+  .choose__title {
+    font-size: 100px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .choose__title {
+    font-size: 76px;
+  }
+}
 .choose__title::before {
   content: "CHOOSE";
   position: absolute;
@@ -412,6 +452,23 @@ body {
   filter: blur(10px);
   z-index: -1;
 }
+@media screen and (max-width: 1320px) {
+  .choose__title::before {
+    left: 50%;
+    translate: -46% 0;
+  }
+}
+@media screen and (max-width: 768px) {
+  .choose__title::before {
+    top: -20px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .choose__title::before {
+    filter: blur(5px);
+    translate: -48% 0;
+  }
+}
 
 .choose__icons {
   max-width: 50%;
@@ -421,19 +478,25 @@ body {
   position: relative;
   z-index: 5;
 }
+@media screen and (max-width: 1320px) {
+  .choose__icons {
+    max-width: 100%;
+  }
+}
 .choose__icons div {
   position: relative;
 }
 .choose__icons div img:first-of-type {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 50%;
+  translate: -50% 0;
 }
 .choose__icons div img:last-of-type {
   position: absolute;
   top: -64px;
   left: 50%;
-  translate: -58% 0;
+  translate: -50% 0;
 }
 .choose__icons div:nth-child(7) img:last-of-type {
   position: absolute;
@@ -443,12 +506,41 @@ body {
 }
 
 .choose__phone {
+  width: 100%;
   position: absolute;
   top: 98px;
   right: 98px;
   width: 671px;
   height: 1264px;
   z-index: 5;
+}
+@media screen and (max-width: 1440px) {
+  .choose__phone {
+    right: 0;
+  }
+}
+@media screen and (max-width: 1320px) {
+  .choose__phone {
+    top: auto;
+    bottom: 0;
+    right: 50%;
+    translate: 50% 0;
+  }
+}
+@media screen and (max-width: 600px) {
+  .choose__phone {
+    scale: 0.8;
+  }
+}
+@media screen and (max-width: 500px) {
+  .choose__phone {
+    scale: 0.7;
+  }
+}
+@media screen and (max-width: 440px) {
+  .choose__phone {
+    scale: 0.5;
+  }
 }
 .choose__phone .phone__bg {
   width: 551px;
@@ -508,6 +600,153 @@ body {
   left: 0;
   translate: -35% -25%;
   z-index: -1;
+}
+@media screen and (max-width: 1600px) {
+  .choose__baggage {
+    display: none;
+  }
+}
+
+.summer {
+  min-height: 1700px;
+  background-color: #000;
+  position: relative;
+  overflow: hidden;
+}
+@media screen and (max-width: 600px) {
+  .summer {
+    min-height: 1300px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .summer {
+    min-height: 1100px;
+  }
+}
+
+.summer__title {
+  width: 1456px;
+  height: 743px;
+  padding-top: 88px;
+  padding-left: 178px;
+  border-radius: 206px;
+  background: #fffefe;
+  font-weight: 700;
+  font-size: 400px;
+  line-height: 65%;
+  color: #000;
+  position: relative;
+  left: -140px;
+  z-index: 5;
+}
+@media screen and (max-width: 1600px) {
+  .summer__title {
+    width: 80vw;
+    height: fit-content;
+    padding-bottom: 88px;
+    font-size: 360px;
+  }
+}
+@media screen and (max-width: 1340px) {
+  .summer__title {
+    font-size: 300px;
+  }
+}
+@media screen and (max-width: 1280px) {
+  .summer__title {
+    font-size: 240px;
+  }
+}
+@media screen and (max-width: 1080px) {
+  .summer__title {
+    font-size: 180px;
+    border-radius: 100px;
+  }
+}
+@media screen and (max-width: 800px) {
+  .summer__title {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    padding-left: 140px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .summer__title {
+    width: 100%;
+    left: 0;
+    border-radius: 0 0 80px 80px;
+    padding-left: 0;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 768px) {
+  .summer__title {
+    font-size: 100px;
+  }
+}
+.summer__title::after {
+  content: url("../public/img/summer/summer_shells.png");
+  position: absolute;
+  top: -40px;
+  right: 0;
+  translate: 100% 0;
+}
+@media screen and (max-width: 768px) {
+  .summer__title::after {
+    display: none;
+  }
+}
+
+.summer__text {
+  max-width: 587px;
+  display: block;
+  margin-top: 106px;
+  margin-left: 65px;
+  font-size: 60px;
+  color: #00fff2;
+  position: relative;
+  filter: drop-shadow(0 10px 14px #00fff2);
+}
+@media screen and (max-width: 768px) {
+  .summer__text {
+    margin-top: 40px;
+    margin-left: 0;
+    font-size: 48px;
+    text-align: center;
+  }
+}
+
+.summer__flamingo {
+  position: absolute;
+  top: 600px;
+  right: 80px;
+}
+@media screen and (max-width: 1600px) {
+  .summer__flamingo {
+    top: 640px;
+  }
+}
+.summer__flamingo::before {
+  content: url("../public/img/summer/summer_shadow.png");
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+}
+@media screen and (max-width: 768px) {
+  .summer__flamingo::before {
+    scale: 0.8;
+  }
+}
+@media screen and (max-width: 600px) {
+  .summer__flamingo::before {
+    scale: 0.6;
+  }
+}
+@media screen and (max-width: 500px) {
+  .summer__flamingo::before {
+    scale: 0.4;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
